...      midnight-dev playing White: 582 - 521 - 385  [0.520] 1488
...      midnight-dev playing Black: 581 - 523 - 382  [0.520] 1486
...      White vs Black: 1105 - 1102 - 767  [0.501] 2974
Elo difference: 13.9 +/- 10.8, LOS: 99.4 %, DrawRatio: 25.8 %
SPRT: llr 2.96 (100.5%), lbound -2.94, ubound 2.94 - H1 was accepted

RFP MaxDepth 4 MarginPerDepth = 200
Score of midnight-dev vs midnight-latest: 238 - 156 - 149  [0.576] 543
...      midnight-dev playing White: 118 - 79 - 74  [0.572] 271
...      midnight-dev playing Black: 120 - 77 - 75  [0.579] 272
...      White vs Black: 195 - 199 - 149  [0.496] 543
Elo difference: 52.9 +/- 25.1, LOS: 100.0 %, DrawRatio: 27.4 %
SPRT: llr 2.97 (101.0%), lbound -2.94, ubound 2.94 - H1 was accepted

RFP MD 9 MPR 75
Score of midnight-dev vs midnight-latest: 520 - 429 - 409  [0.534] 1358
...      midnight-dev playing White: 266 - 201 - 212  [0.548] 679
...      midnight-dev playing Black: 254 - 228 - 197  [0.519] 679
...      White vs Black: 494 - 455 - 409  [0.514] 1358
Elo difference: 23.3 +/- 15.5, LOS: 99.8 %, DrawRatio: 30.1 %
SPRT: llr 2.95 (100.2%), lbound -2.94, ubound 2.94 - H1 was accepted

Eval in NMP Depth Reduction
Score of midnight-dev vs midnight-latest: 153 - 82 - 121  [0.600] 356
...      midnight-dev playing White: 89 - 33 - 56  [0.657] 178
...      midnight-dev playing Black: 64 - 49 - 65  [0.542] 178
...      White vs Black: 138 - 97 - 121  [0.558] 356
Elo difference: 70.2 +/- 29.6, LOS: 100.0 %, DrawRatio: 34.0 %
SPRT: llr 2.95 (100.1%), lbound -2.94, ubound 2.94 - H1 was accepted

LMR V1
Score of midnight-dev vs midnight-latest: 125 - 54 - 83  [0.635] 262
...      midnight-dev playing White: 64 - 28 - 39  [0.637] 131
...      midnight-dev playing Black: 61 - 26 - 44  [0.634] 131
...      White vs Black: 90 - 89 - 83  [0.502] 262
Elo difference: 96.6 +/- 35.6, LOS: 100.0 %, DrawRatio: 31.7 %
SPRT: llr 2.96 (100.5%), lbound -2.94, ubound 2.94 - H1 was accepted
